# gpu-thermal-worlock

./: README.md  gpu_thermal.toml  pyproject.toml  requirements.txt
docs/: 2026-05-10_gpu_power_limit_275w.md  2026-05-10_gpu_thermal_future_directions.dot  2026-05-12_rtx5080_gpu_audit.md  arch_clock_vs_power.dot  arch_power_budget.dot  arch_power_limit_history.dot  arch_service_dependencies.dot  arch_system_overview.dot  arch_thermal_control_flow.dot  arch_watchdog_state_machine.dot  logo.dot
gpu_thermal/: __init__.py  cli.py  config.py  modes.py  nvml.py  watchdog.py
scripts/: gpu_rollback.sh
systemd/: gpu-eco-mode.service  gpu-watchdog.service
